from game.casting.actor import Actor
from game.shared.point import Point


class Banner(Actor):
    """
    Banner to be displayed at the top of the screen.
    """
    def __init__(self):
        super().__init__()
